gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for gschem

Most recent changes (version wise) are at the top of this file
All the changes are usually noted in this file when they are checked
into the cvs repository.

9/25/99 Rearranged right mouse button menu (suggestion by Magnus)

9/23/99 Updated all the man pages (in all the program dirs) warning users
	to specify options first.

9/21/99 Fixed all the dialog boxes so that they listened to the WM_DELETE
	signal from the window manager

	Forgot to init iwindow to NULL

	Added a few gtk_widget_destroys to x_window_close which I forgot to
	add when I created the dialog boxes 

9/20/99	Changed the project logo to GPL Electronic Design Automation instead
	of GNU ...

9/19/99 Make sure gschem runs with guile-1.3.2a

	Misplaced a bracket in x_event.c (gschem would not build if you
	did not have libstroke installed)
	
	Fixed all warnings

	Added OBJ_BUS and OBJ_PIN to the color change routine in the
	color edit dialog box

9/18/99	Increased world size to be much much larger.  Hopefully this won't
	break anything.

	Fixed the extension code in i_callback.c to add the NULL character
	to the right place.

	Removed freestyle color 17, it was unnecessary, the IEC417 symbols
	can use the lock color (15).

	Fixed the grid drawing to draw the grid at the right zoom levels
	(since I doubled the world size)

9/17/99	Put some code into i_set_filename which truncates extra long
	files, so that the window size isn't affected.

	Changed the botton status bar a bit.
		- Removed the "Mouse buttons" label
		- Change the buttons to labels

	Added the "middle-button" keywork which allows you to control what
	the middle button is assigned to do.  (also added keyword to system
	rc file)

	Added code to support the "move" mode of middle-button, which
	allows you to move stuff around by just clicking the middle button